# Multi-Index-Router-RAG

./: .gitignore  README.md  pyproject.toml
app_client/: streamlit_app.py
data/code/: auth.py
data/docs/: welcome.md
data/pdfs/: placeholder.txt
data/tables/: customers.csv  orders.csv
src/mirag/: app.py  chunkers.py  embeddings.py  llm_groq.py  router.py  stores.py
src/mirag/retrievers/: sql_duckdb.py  text_pdf_code.py
